deploy: b9f3fea9c5f04e5ddadd5ce463fe6341d4e360c1

--- a/builder-01/index.html
+++ b/builder-01/index.html
@@ -60,7 +60,7 @@
 </ul>
 <h2 id="news">News</h2>
 <ul>
-<li></li>
+<li>TEST TEST TEST</li>
 </ul>
 <h2 id="discussion">Discussion</h2>
 <h4 id="bitcoin-products">Bitcoin Products</h4>
