deploy: 00f631c46906be6aee19a9c65fd2425218c088d2

--- a/builder-01/index.html
+++ b/builder-01/index.html
@@ -127,8 +127,7 @@
 <ul>
 <li><a href="https://github.com/bitcoin/bips/pull/1821">BIP-177</a> describes a new approach to bitcoin units that deprecates both the use of decimals and the usage of “sats/satoshis”</li>
 <li>New page added to <a href="https://bitcoin.design/guide/designing-products/units-and-symbols/">Design guide</a> with proposed best practices</li>
-<li><a href="https://boardwalkcash.com/wallet">Boardwalk Cash is an example of a product leading and embracing the change.</a></li>
-<li>DEMO idea? Can we see live example on how “1 Satoshi” can be displayed as “1 Bitcoin”</li>
+<li><a href="https://boardwalkcash.com/wallet">Boardwalk Cash is an example of a product leading and embracing the change</a></li>
 </ul>
 </li>
 <li>Seedless is safer debate</li>
