--- a/builder-02/index.html
+++ b/builder-02/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      ₿uilder
+      ₿uilder | ₿uilder 2
     </title>
     <meta name="description" content="Website for the ₿uilder Meetup.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -46,29 +46,66 @@
     <hr>
     <article>
       
-<p>
-  ₿uilder is a monthly meetup focused on discussing product, design, and AI tools for individuals building on bitcoin. 
-  Everyone is welcome, whether you're an experienced product manager or designer, just starting out, or simply curious to learn.
-</p>
-
-<img src="https://avatars.githubusercontent.com/u/215772759?v=4" alt="Bitcoin Builder SF Logo" style="max-width: 20%; height: auto;">
-
-<h2>Socratic Seminars</h2>
-<ul class="posts">
-  
-    <li>
-      <time>24 Jul 2025</time>
-      »
-      <a href="https://bitcoinbuildersf.github.io/BitcoinBuilderSF/builder-02/">₿uilder 2</a>
-    </li>
-  
-    <li>
-      <time>26 Jun 2025</time>
-      »
-      <a href="https://bitcoinbuildersf.github.io/BitcoinBuilderSF/builder-01/">₿uilder 1</a>
-    </li>
-  
+<h1>₿uilder 2</h1>
+<p><strong>2025-07-24</strong></p>
+<h2 id="intro-10-min">Intro (10 min)</h2>
+<ul>
+<li>Chatham House Rules — No photos/videos</li>
+<li>Quick Show of Hands
+<ul>
+<li>Who works for big tech? PM? Designer? Other?</li>
+<li>Who has vibe coded before? Integrated bitcoin?</li>
 </ul>
+</li>
+<li>10 Second Intros
+<ul>
+<li>Name</li>
+<li>What you do</li>
+<li>What you want to get out of ₿uilder</li>
+</ul>
+</li>
+</ul>
+<hr />
+<h2 id="vibe-coded-app-showcase-15-min">Vibe-Coded App Showcase (15 min)</h2>
+<ul>
+<li></li>
+</ul>
+<h2 id="startup-showcase-15-min">Startup Showcase (15 min)</h2>
+<ul>
+<li></li>
+</ul>
+<hr />
+<h2 id="discussions-40-min">Discussions (40 min)</h2>
+<ul>
+<li></li>
+</ul>
+<hr />
+<h2 id="bitcoin-product-news-if-time-permits">Bitcoin Product News (if time permits)</h2>
+<ul>
+<li></li>
+</ul>
+<hr />
+<h2 id="regulatory-news-if-time-permits">Regulatory News (if time permits)</h2>
+<ul>
+<li></li>
+</ul>
+<hr />
+<h2 id="bitcoin-design-news-if-time-permits">Bitcoin Design News (if time permits)</h2>
+<ul>
+<li></li>
+</ul>
+<hr />
+<h2 id="miscellaneous-1-min">Miscellaneous (1 min)</h2>
+<ul>
+<li></li>
+</ul>
+<hr />
+<h2 id="wrapping-up-5-min">Wrapping Up (5 min)</h2>
+<ul>
+<li>What went well?</li>
+<li>Areas of improvement for future meetups</li>
+</ul>
+
 
     </article>
     <hr>
