deploy: cf5f4f4a709978316ecccbbad0dfca5efad338c9

--- a/builder-02/index.html
+++ b/builder-02/index.html
@@ -48,62 +48,45 @@
       
 <h1>₿uilder 2</h1>
 <p><strong>2025-07-24</strong></p>
-<h2 id="intro-10-min">Intro (10 min)</h2>
+<h2 id="intro-5-min">Intro (5 min)</h2>
 <ul>
-<li>Chatham House Rules — No photos/videos</li>
-<li>Quick Show of Hands
+<li>Chatham house rules. No photos/videos.</li>
+<li>Our 2nd event…review what we learned last time and applying to this one</li>
+<li>Presidio Bitcoin design week in September https://event.bitcoin.design</li>
+<li>Miami ₿uilder, and hoping to see more of these pop up around the world!</li>
+<li>10 second intros
 <ul>
-<li>Who works for big tech? PM? Designer? Other?</li>
-<li>Who has vibe coded before? Integrated bitcoin?</li>
-</ul>
-</li>
-<li>10 Second Intros
-<ul>
-<li>Name</li>
-<li>What you do</li>
-<li>What you want to get out of ₿uilder</li>
+<li>Name, what you do, what you want to get out of ₿uilder</li>
 </ul>
 </li>
 </ul>
 <hr />
 <h2 id="vibe-coded-app-showcase-15-min">Vibe-Coded App Showcase (15 min)</h2>
 <ul>
-<li></li>
+<li>Mat Balez Zero to Bitcoin App in under 15 minutes</li>
+<li>sando?</li>
 </ul>
-<h2 id="startup-showcase-15-min">Startup Showcase (15 min)</h2>
+<h2 id="startup-showcase-0-min">Startup Showcase (0 min)</h2>
 <ul>
 <li></li>
 </ul>
 <hr />
-<h2 id="discussions-40-min">Discussions (40 min)</h2>
+<h2 id="discussions-70-min">Discussions (70 min)</h2>
 <ul>
-<li></li>
+<li>“maybe human money and machine money will be totally different things” https://x.com/sama/status/1945541270438646270</li>
+<li>Why build with bitcoin vs. stablecoins?</li>
+<li>Future of bitcoin payment protocols, tech platforms</li>
+<li>How to untangle payment protocol mess</li>
+<li>Pick a big tech company/product…brainstorm how bitcoin could be added to it and add value</li>
+<li>Mixing digital and physical world: Integrating vibe-coded apps with billboards</li>
 </ul>
 <hr />
-<h2 id="bitcoin-product-news-if-time-permits">Bitcoin Product News (if time permits)</h2>
+<h2 id="news-30-min">News (30 min)</h2>
 <ul>
-<li></li>
-</ul>
-<hr />
-<h2 id="regulatory-news-if-time-permits">Regulatory News (if time permits)</h2>
-<ul>
-<li></li>
-</ul>
-<hr />
-<h2 id="bitcoin-design-news-if-time-permits">Bitcoin Design News (if time permits)</h2>
-<ul>
-<li></li>
-</ul>
-<hr />
-<h2 id="miscellaneous-1-min">Miscellaneous (1 min)</h2>
-<ul>
-<li></li>
-</ul>
-<hr />
-<h2 id="wrapping-up-5-min">Wrapping Up (5 min)</h2>
-<ul>
-<li>What went well?</li>
-<li>Areas of improvement for future meetups</li>
+<li>Simple Proof. How does it compare to OpenTimestamps? Why hasn’t a product like this found product-market fit yet? https://stacker.news/items/1041737/r/dk</li>
+<li>Coinbase integrates farcaster … can an everything-app like Base catalyze payments? https://x.com/base/status/1945624674656030985</li>
+<li>Nevada the new Delaware? https://x.com/a16z/status/1942974830774829428</li>
+<li>Big beautiful bill impact on bitcoin mining and taxes https://x.com/WilsonMining/status/1945179417279652036</li>
 </ul>
 
 
