deploy: f4fc86c1337b9d1dc8fed6ed34f1fe095982fe04

--- a/builder-02/index.html
+++ b/builder-02/index.html
@@ -64,7 +64,7 @@
 <h2 id="vibe-coded-app-showcase-15-min">Vibe-Coded App Showcase (15 min)</h2>
 <ul>
 <li>Mat Balez Zero to Bitcoin App in under 15 minutes</li>
-<li>sando?</li>
+<li>Damian demo'ing Sando</li>
 </ul>
 <h2 id="startup-showcase-0-min">Startup Showcase (0 min)</h2>
 <ul>
