deploy: 8b8b8ce537235e4a7983d0e2531e3827f1055bed

--- a/builder-02/index.html
+++ b/builder-02/index.html
@@ -61,17 +61,17 @@
 </li>
 </ul>
 <hr />
-<h2 id="vibe-coded-app-showcase-15-min">Vibe-Coded App Showcase (15 min)</h2>
+<h2 id="vibe-coded-app-showcase-30-min">Vibe-Coded App Showcase (30 min)</h2>
 <ul>
 <li>Mat Balez Zero to Bitcoin App in under 15 minutes</li>
 <li>Damian demo'ing Sando</li>
 </ul>
-<h2 id="startup-showcase-0-min">Startup Showcase (0 min)</h2>
+<h2 id="startup-showcase-10-min">Startup Showcase (10 min)</h2>
 <ul>
-<li></li>
+<li>David Bryson checkout.tech demo</li>
 </ul>
 <hr />
-<h2 id="discussions-70-min">Discussions (70 min)</h2>
+<h2 id="discussions-60-min">Discussions (60 min)</h2>
 <ul>
 <li>“maybe human money and machine money will be totally different things” https://x.com/sama/status/1945541270438646270</li>
 <li>Why build with bitcoin vs. stablecoins?</li>
@@ -81,7 +81,7 @@
 <li>Mixing digital and physical world: Integrating vibe-coded apps with billboards</li>
 </ul>
 <hr />
-<h2 id="news-30-min">News (30 min)</h2>
+<h2 id="news-15-min">News (15 min)</h2>
 <ul>
 <li>Simple Proof. How does it compare to OpenTimestamps? Why hasn’t a product like this found product-market fit yet? https://stacker.news/items/1041737/r/dk</li>
 <li>Coinbase integrates farcaster … can an everything-app like Base catalyze payments? https://x.com/base/status/1945624674656030985</li>
