deploy: 2df96e23572a46ff497201e27971fa56b9bdf39f

--- a/builder-02/index.html
+++ b/builder-02/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      ₿uilder | ₿uilder 2
+      ₿uilder Mars | ₿uilder 2
     </title>
     <meta name="description" content="Website for the ₿uilder Meetup.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,14 +33,14 @@
   </head>
   <body>
     <header>
-      <h1><a href="/">₿uilder</a></h1>
+      <h1><a href="/">₿uilder Mars</a></h1>
       <nav>
-        <a href="https://www.meetup.com/bay-area-bitcoiners/events/308542831" target="_blank">Meetup</a>
-        <a href="https://twitter.com/bbuildersf" target="_blank">Twitter</a>
-        <a href="https://github.com/BitcoinBuilderSF/BitcoinBuilderSF" target="_blank">GitHub</a>
+        <a href="https://www.meetup.com/builder-mars" target="_blank">Meetup</a>
+        <a href="https://twitter.com/buildermars" target="_blank">Twitter</a>
+        <a href="https://github.com/dladowitz/buildermars" target="_blank">GitHub</a>
         <a href="/feed.xml">RSS</a>
-        <a href="https://sfbitcoindevs.org" target="_blank">BitDevs</a>
-        <a href="https://sflightningdevs.org" target="_blank">LitDevs</a>
+        <a href="https://marbitcoindevs.org" target="_blank">BitDevs</a>
+        <a href="https://marslightningdevs.org" target="_blank">LitDevs</a>
       </nav>
     </header>
     <hr>
