deploy: 90294b14e517ca27b548fa8af9bfa1977327b63a

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
     <li>
       <time>24 Jul 2025</time>
       »
-      <a href="https://bitcoinbuildersf.github.io/BitcoinBuilderSF/builder-02/">₿uilder 2</a>
+      <a href="https://dladowitz.github.io/BuilderMars/builder-02/">₿uilder 2</a>
     </li>
   
     <li>
       <time>26 Jun 2025</time>
       »
-      <a href="https://bitcoinbuildersf.github.io/BitcoinBuilderSF/builder-01/">₿uilder 1</a>
+      <a href="https://dladowitz.github.io/BuilderMars/builder-01/">₿uilder 1</a>
     </li>
   
 </ul>
