deploy: 8bd6599768223faba908b33542b683b85e576d65

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a href="https://twitter.com/buildermars" target="_blank">Twitter</a>
         <a href="https://github.com/dladowitz/buildermars" target="_blank">GitHub</a>
         <a href="/feed.xml">RSS</a>
-        <a href="https://marbitcoindevs.org" target="_blank">BitDevs</a>
+        <a href="https://marsbitcoindevs.org" target="_blank">BitDevs</a>
         <a href="https://marslightningdevs.org" target="_blank">LitDevs</a>
       </nav>
     </header>
@@ -59,13 +59,13 @@
     <li>
       <time>24 Jul 2025</time>
       »
-      <a href="https://dladowitz.github.io/BuilderMars/builder-02/">₿uilder 2</a>
+      <a href="https://buildermars.com/builder-02/">₿uilder 2</a>
     </li>
   
     <li>
       <time>26 Jun 2025</time>
       »
-      <a href="https://dladowitz.github.io/BuilderMars/builder-01/">₿uilder 1</a>
+      <a href="https://buildermars.com/builder-01/">₿uilder 1</a>
     </li>
   
 </ul>
